# C-course-

./: CMakeLists.txt  README.md  data.txt  data2.txt  data5.txt  ideal  ideal.cpp  ideal.h  ideal.hpp  lirs.cpp  lirs.h  lirs.hpp
ideal/: CMakeLists.txt  ideal  ideal.cpp  ideal.hpp
lirs/: CMakeLists.txt  lirs.cpp  lirs.hpp
test/: comparison.txt  data.txt  data3.txt  data7.txt  data8.txt
unit_test/func/: func.hpp
unit_test/ideal/: CMakeLists.txt  ideal_test.cpp
unit_test/lirs/: CMakeLists.txt  lirs_test.cpp
